--- a/Punteros/Punteros.vcxproj.filters
+++ b/Punteros/Punteros.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Punteros.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Enums.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
